--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,35 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                     <artifactId>cobertura-maven-plugin</artifactId>
+                    <version>2.4</version>
+                 <configuration>
+                    <instrumentation>
+                     <includes>
+                        <include>*</include>
+                    </includes>
+                    </instrumentation>
+                 </configuration>
+            <executions>
+                <execution>
+                <id>clean</id>
+                <phase>pre-site</phase>
+                 <goals>
+                <goal>clean</goal>
+                </goals>
+             </execution>
+            <execution>
+             <id>instrument</id>
+                <phase>site</phase>
+             <goals>
+          <goal>instrument</goal>
+          <goal>cobertura</goal>
+        </goals>
+      </execution>
+    </executions>
+      </plugin>
+            <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.10</version>
                 <configuration>
