--- a/pom.xml
+++ b/pom.xml
@@ -322,7 +322,7 @@
                                     <version>${cobertura.version}</version>
                                     <configuration>
                                         <formats>
-                                            <format>html</format>
+                                            <format>xml</format>
                                         </formats>
                                     </configuration>
                                 </plugin>
