--- a/pom.xml
+++ b/pom.xml
@@ -210,14 +210,13 @@
                         <version>${cobertura.version}</version>
                         <configuration>
                             <formats>
-                                <format>html</format>
                                 <format>xml</format>
                             </formats>
                         </configuration>
                         <executions>
                             <execution>
                                 <goals>
-                                    <goal>clean</goal>
+                                    <goal>clean package</goal>
                                     <goal>check</goal>
                                 </goals>
                             </execution>
