--- a/pom.xml
+++ b/pom.xml
@@ -47,9 +47,9 @@
             <executions>
                 <execution>
                 <id>clean</id>
-                <phase>pre-site</phase>
+                <phase>package</phase>
                  <goals>
-                <goal>clean</goal>
+                <goal>cobertura</goal>
                 </goals>
              </execution>
             <execution>
@@ -211,13 +211,15 @@
                         <configuration>
                             <formats>
                                 <format>xml</format>
+                                <format>html</format>
                             </formats>
                         </configuration>
                         <executions>
                             <execution>
                                 <goals>
                                     <goal>clean</goal>
-                                    <goal>check</goal>
+                                    <goal>cobertura</goal>
+                                     <goal>package</goal>
                                 </goals>
                             </execution>
                         </executions>
@@ -315,16 +317,7 @@
                                     <artifactId>CODENARC-maven-plugin</artifactId>
                                     <version>0.8-alpha-1</version>
                                 </plugin>
-                                <plugin>
-                                    <groupId>org.codehaus.mojo</groupId>
-                                    <artifactId>cobertura-maven-plugin</artifactId>
-                                    <version>${cobertura.version}</version>
-                                    <configuration>
-                                        <formats>
-                                            <format>xml</format>
-                                        </formats>
-                                    </configuration>
-                                </plugin>
+                               
                                 <plugin>
                                     <groupId>org.apache.maven.plugins</groupId>
                                     <artifactId>maven-checkstyle-plugin</artifactId>
